removed width css from LogInForm and RegistrationForm to fix overflow issue

--- a/client/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/client/src/components/RegistrationForm/RegistrationForm.module.css
@@ -1,6 +1,5 @@
 .Container {
   min-height: 100vh;
-  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
